bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if (10<=n<=100) {
    return true
  }
}